--- a/css/leptonContent.css
+++ b/css/leptonContent.css
@@ -2621,6 +2621,7 @@
         /* From checkbox.css */
         menuitem[type="checkbox"] {
           appearance: none !important;
+          align-items: center !important;
           -moz-box-align: center !important;
           margin: 0px 2px !important;
         }
