--- a/src/theme/proton_chrome/_proton_commons.scss
+++ b/src/theme/proton_chrome/_proton_commons.scss
@@ -278,7 +278,7 @@
   }
 
   #label-box {
-    -moz-box-align: center !important;
+    @include BoxAlign("center", true);
     -moz-box-pack: center !important;
     font-weight: 600 !important;
   }
